[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
rand = "0.8"
uuid = { version = "1.8", features = ["v4"] }
chrono = "0.4"
log = "0.4"
env_logger = "0.11"

# --- Geração de dados aleatórios para matrizes ---
ndarray = "0.15"
ndarray-rand = "0.14"
rand_distr = "0.4"