[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = "1.0"
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
sysinfo = "0.30"

# --- Computação Numérica ---
ndarray = "0.15"
# Para performance máxima, ative a feature blas
# ndarray-linalg = { version = "0.16", features = ["openblas-static"] }

# --- Salvamento de Imagem ---
image = "0.25"